<resources>
    <string name="app_name">GenuvaApp</string>
    <string name="genuva">Genuva App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget">Forget Password?</string>
    <string name="donnot">Don not have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_with_google">Login With Google</string>
    <string name="login_with_Number">Login With phone Number</string>
    <string name="login_with_Facebook">Login With Facebook</string>
    <string name="re">Re-Password</string>
    <string name="sakia">Sakiat El Saawy</string>
    <string name="opera">Opera House</string>
    <string name="tickets">My Tickets</string>
    <string name="part">create party</string>
    <string name="logout">Logout</string>
    <string name="kamal">Kamal Wagdy</string>
    <string name="ga5">El Ga5</string>
    <string name="masarEgabary">Masara Egbary</string>
    <string name="amr">Amr Hassan</string>
    <string name="date1">4 PM, 19 April</string>
    <string name="date2">7 PM, 25 April</string>
    <string name="date3">9 PM, 18 April</string>
    <string name="date4">6 PM, 20 April</string>
    <string name="party_name">Party name</string>
    <string name="party_time">Party time</string>
    <string name="price">Tickets price</string>
    <string name="first">First Class</string>
    <string name="second">Second Class</string>
    <string name="third">Third Class</string>
    <string name="select_img">Select Image</string>
    <string name="place">Select party place</string>
    <string name="create_party">Create party</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="selecte_your_seats_please">Selecte your seats please!</string>
    <string name="avilable">Avilable</string>
    <string name="Available">Available</string>
    <string name="reserved">Reserved</string>
    <string name="selected">Selected</string>
    <string name="_100_l_e">100 L.E</string>
    <string name="you_selected">You Selected:</string>
    <string name="tickests_price">Tickests price:</string>
    <string name="_0_l_e">0 L.E</string>
    <string name="none">None</string>
    <string name="did_you_forget_password">Did you forget password?</string>
    <string name="please_enter_your_email_and_we_will_send_you_a_verification_code_to_rest_your_password">Please enter your email and we will send you a verification code to rest your password</string>
    <string name="genuvaApp">Genuva</string>
    <string name="book_now">Book Now</string>
    <string name="profile">profile</string>
    <string name="enter_verification_code">Enter Verification code</string>
    <string name="send_code">send code</string>
    <string name="check_and_sign_in">check and Sign In</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="facebook_app_id">440102176611724</string>
    <string name="fb_login_protocol_scheme">fb440102176611724</string>
    <string name="send_email">Send Email</string>
    <string name="party_name_">Party Name:</string>
    <string name="party_price">Party Price:</string>
    <string name="party_time_">Party Time:</string>
    <string name="seats_number">Seats Number:</string>
    <string name="seats_count">Seats Count:</string>
    <string name="cancel_book">cancel book</string>

</resources>
